Add secure generic product variants
